--- a/styles.sass
+++ b/styles.sass
@@ -1,3 +1,17 @@
 body
   margin: 0
   box-sizing: border-box
+
+.tool-wrapper
+  width: 30px
+  height: 55px
+
+  background-color: pink
+  display: block
+
+  position: absolute
+  top: 0
+  left: 0
+
+  &.opened
+    width: 100vw
