--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,15 @@ body h1, body h2, body h3, body h4, body h5, body h6, body p {
   margin: 0;
 }
 
+canvas {
+  cursor: crosshair;
+}
+
 #tool-wrapper {
   width: 100%;
   height: 50px;
   padding: 3px;
-  background-color: #f4f4f4;
+  background-color: #c0392b;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -28,9 +32,21 @@ body h1, body h2, body h3, body h4, body h5, body h6, body p {
   position: fixed;
   top: 0;
   left: calc(-100% + 50px);
-  overflow: hidden;
   transition: left 00.7s ease-in-out;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
+  color: white;
+}
+
+#tool-wrapper div, #tool-wrapper a {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
 }
 
 #tool-wrapper.opened {
@@ -86,9 +102,36 @@ body h1, body h2, body h3, body h4, body h5, body h6, body p {
 }
 
 #tool-wrapper #drawing-tools .tool.selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+#tool-wrapper #settings-btn:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-canvas {
-  cursor: crosshair;
+#tool-wrapper #actions {
+  width: 100px;
+  height: 100%;
+  max-height: 40px;
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  top: -5px;
+}
+
+#tool-wrapper #actions:hover {
+  overflow: visible;
+}
+
+#tool-wrapper #actions li {
+  height: 50px;
+  background-color: #c0392b;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#tool-wrapper #actions li:hover {
+  background-color: #ab3326;
 }
