--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,94 +1,5 @@
-*
-  box-sizing: border-box
+@import "imp/colloro"
 
-body
-  width: 100vw
-  min-height: 100vh
-
-  overflow-y: auto
-
-
-  position: relative
-  z-index: 0
-  display: block
-  font-family: 'Roboto'
-
-  h1,h2,h3,h4,h5,h6,p
-    margin: 0
-
-#tool-wrapper
-  width: 100%
-  height: 50px
-  padding: 3px
-
-  background-color: #f4f4f4
-  display: flex
-  flex-direction: row
-  justify-content: space-between
-  align-items: center
-
-  position: fixed
-  top: 0
-  left: calc(-100% + 50px)
-
-  overflow: hidden
-  transition: left 00.7s ease-in-out
-
-  box-shadow: 0px 5px 15px rgba(0,0,0,0.35)
-
-  &.opened
-    left: 0
-
-    #arrow
-      .fa
-        transform: rotateZ(180deg)
-
-  #arrow
-    width: 50px
-    height: 100%
-    float: right
-
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-
-    order: 1
-
-    .fa
-      transition: transform 0.6s ease-in-out
-
-  #color_pick
-    width: 44px
-    height: 100%
-    border: 0
-    outline: 0
-
-    border-radius: 50%
-    float: left
-
-  #drawing-tools
-    display: block
-    position: relative
-    width: 240px
-
-    display: flex
-    flex-direction: row
-    justify-content: space-around
-    align-items: center
-
-    .tool
-      height: 46px
-      cursor: pointer
-      width: 80px
-
-      display: flex
-      flex-direction: row
-      justify-content: center
-      align-items: center
-
-      &.selected
-        background-color: rgba(0,0,0,0.05)
-
-canvas
-  cursor: crosshair
+@import "parts/global"
+@import "parts/modals"
+@import "parts/tools"
