--- a/css/parts/global.sass
+++ b/css/parts/global.sass
@@ -11,7 +11,7 @@ body
   position: relative
   z-index: 0
   display: block
-  font-family: 'Roboto'
+  font-family: 'Open Sans'
 
   h1,h2,h3,h4,h5,h6,p
     margin: 0
