--- a/css/parts/modals.sass
+++ b/css/parts/modals.sass
@@ -42,3 +42,30 @@
       left: 50%
 
       transform: translateY(-50%) translateX(-50%) rotateZ(-45deg)
+
+  .modal_btn
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+    margin-top: 40px
+    margin-left: calc(25% - 50px)
+    margin-right: calc(25% - 50px)
+
+    float: left
+    border: 0
+    outline: 0
+    width: 100px
+    height: 50px
+
+    background-color: $fl-lblue
+
+    text-decoration: none
+    color: white
+
+    &.modal-confirm
+      background-color: $fl-lgreen
+
+    &.modal-cancel
+      background-color: $fl-lred
