--- a/css/parts/tools.sass
+++ b/css/parts/tools.sass
@@ -64,7 +64,7 @@
   #drawing-tools
     display: block
     position: relative
-    width: 240px
+    width: 270px
 
     display: flex
     flex-direction: row
@@ -80,6 +80,9 @@
       flex-direction: row
       justify-content: center
       align-items: center
+
+      &#eyedropper
+        width: 120px
 
       &.selected
         background-color: rgba(0,0,0,0.1)
