--- a/css/parts/modals.sass
+++ b/css/parts/modals.sass
@@ -43,6 +43,26 @@
 
       transform: translateY(-50%) translateX(-50%) rotateZ(-45deg)
 
+  .modal_content
+    margin-top: 30px
+    margin-bottom: 30px
+
+    p
+      margin: 20px
+      line-height: 160%
+
+  .modal_input[type="text"]
+    width: 200px
+    border: 0
+    background-color: #f3f3f3
+    padding: 17px
+
+  .modal_label
+    width: 100px
+    margin-right: 10px
+
+  .setting-item
+    margin: 10px
   .modal_btn
     display: flex
     flex-direction: column
