--- a/css/parts/tools.sass
+++ b/css/parts/tools.sass
@@ -62,19 +62,23 @@
     float: left
 
   #drawing-tools
-    display: block
     position: relative
-    width: 270px
+    //width: 270px
+    height: 50px
+    max-height: 50px
+    overflow: hidden
+    transition: max-height 0.25s ease-in
 
-    display: flex
-    flex-direction: row
-    justify-content: space-around
-    align-items: center
+    &:hover
+      max-height: 400px
+      overflow: visible
 
-    .tool
-      height: 46px
+    .tool, p
+      height: 50px
       cursor: pointer
-      width: 80px
+      padding: 0px 10px
+      //width: 80px
+      background-color: $fl-red
 
       display: flex
       flex-direction: row
@@ -82,10 +86,11 @@
       align-items: center
 
       &#eyedropper
-        width: 120px
-
+        //width: 120px
+      &:hover
+        background-color: $fl-lred
       &.selected
-        background-color: rgba(0,0,0,0.1)
+        background-color: darken($fl-red, 5%)
 
   #settings-btn
     &:hover
