--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ canvas {
   border: 2px solid black;
   border-radius: 50%;
   margin: auto;
-  transition: transform 0.2s;
+  transition: transform 0.15s;
 }
 
 .modal_window .modal-close:hover {
@@ -176,31 +176,35 @@ canvas {
 }
 
 #tool-wrapper #drawing-tools {
-  display: block;
   position: relative;
-  width: 270px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  height: 50px;
+  max-height: 50px;
+  overflow: hidden;
+  transition: max-height 0.25s ease-in;
 }
 
-#tool-wrapper #drawing-tools .tool {
-  height: 46px;
+#tool-wrapper #drawing-tools:hover {
+  max-height: 400px;
+  overflow: visible;
+}
+
+#tool-wrapper #drawing-tools .tool, #tool-wrapper #drawing-tools p {
+  height: 50px;
   cursor: pointer;
-  width: 80px;
+  padding: 0px 10px;
+  background-color: #c0392b;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-#tool-wrapper #drawing-tools .tool#eyedropper {
-  width: 120px;
+#tool-wrapper #drawing-tools .tool:hover, #tool-wrapper #drawing-tools p:hover {
+  background-color: #e74c3c;
 }
 
-#tool-wrapper #drawing-tools .tool.selected {
-  background-color: rgba(0, 0, 0, 0.1);
+#tool-wrapper #drawing-tools .tool.selected, #tool-wrapper #drawing-tools p.selected {
+  background-color: #ab3326;
 }
 
 #tool-wrapper #settings-btn:hover {
