--- a/css/styles.css
+++ b/css/styles.css
@@ -237,3 +237,86 @@ canvas {
 #tool-wrapper #actions li:hover {
   background-color: #ab3326;
 }
+
+#tool-wrapper #save-color_btn:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+#tool-wrapper #saved-colors_holder {
+  width: 150px;
+  height: 50px;
+  max-height: 50px;
+  overflow: hidden;
+  list-style: none;
+  display: block;
+  position: relative;
+}
+
+#tool-wrapper #saved-colors_holder:hover {
+  max-height: 100vh;
+  overflow: visible;
+}
+
+#tool-wrapper #saved-colors_holder li {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: #c0392b;
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color {
+  position: relative;
+  overflow: visible;
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color:hover {
+  background-color: #e74c3c;
+  cursor: pointer;
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color:hover .remove-btn {
+  left: 100%;
+  opacity: 1;
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color .color {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+  background-color: black;
+  border-radius: 50%;
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color .remove-btn {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: calc(100% - 10px);
+  transition: left 0.1s linear, opacity 0.1s linear;
+  opacity: 0;
+  transform: translateY(-50%);
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color .remove-btn::before, #tool-wrapper #saved-colors_holder li.saved-color .remove-btn::after {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #c0392b;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color .remove-btn::before {
+  transform: translateX(-50%) translateY(-50%) rotateZ(45deg);
+}
+
+#tool-wrapper #saved-colors_holder li.saved-color .remove-btn::after {
+  transform: translateX(-50%) translateY(-50%) rotateZ(-45deg);
+}
